# Link-loader

./: .env-example  .flake8  .gitignore  Dockerfile  Makefile  README.md  app_entrypoint.py  compose.env-example  config.yaml  config2.yaml  config_prod.yaml  docker-compose-rabbit.yaml  docker-compose.yaml  docker-entrypoint.sh  entrypoint.py  link_loader.py  pyproject.toml  q
.github/workflows/: on_push.yml
linker_app/: __init__.py  alembic.ini  app.py  logger.py  routes.py  settings.py
linker_app/api/: __init__.py
linker_app/app/: __init__.py  __main__.py  logger.py  routes.py  settings.py
linker_app/app/service/: link_parsers.py
linker_app/app/templates/: base.html
linker_app/database/: base.py  query.py  schema.py
linker_app/database/migrations/: env.py
linker_app/db/: __init__.py  __main__.py  engine.py  models.py  query.py  schema.py  sub__main__.py
linker_app/db/alembic/: env.py
linker_app/db/migrations/: env.py
linker_app/main/: __init__.py  __main__.py  exceptions.py  forms.py  routes.py
linker_app/main/service/: link_parsers.py  routes_handlers.py
linker_app/rabbit_extension/: rabbit.py
linker_app/service/: exceptions.py  handlers.py  routes_handlers.py  validators.py
linker_app/templates/: base.html  csrf_error.html  links.html  logs.html
linker_app/tests/: conftest.py
linker_app/tests/app/: test_handlers.py  test_routes.py  utils.py
linker_app/tests/db/: test_migrations_stairway.py  test_query.py
linker_app/tests/utils/: test_logger.py
linker_app/tests/workers/: conftest.py  test_link_checker.py
linker_app/utils/: argparse.py  config.py  db.py  handlers.py  logger.py  pg.py  query.py  service.py  settings.py  testing.py  validators.py
linker_app/workers/: exceptions.py  file_parser.py  link_checker.py  query.py  test_callback.py
linker_app/workers/file_parser/: file_parser.py
linker_app/workers/link_checker/: __init__.py  app.py  main.py
main/: __init__.py  app.py  app2.py  config.py  logger.py  routes.py  settings.py
main/templates/: index.html  logs.html
nginx/: linker_app.conf  nginx.conf
prometheus_docker/: prometheus.yml
sub_project/: app.py
tests/: test_routes.py  utils.py
workers/: file_parser.py
(+8 files in other folders)
