[tool.poetry]
name = "dana-project"
version = "0.1.0"
description = "Project for links loader and status check"
authors = ["Fausterkun <Fausterkun@gmail.com>"]
readme = "README.md"
packages = [{include = "dana_project"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.2.3"
pyyaml = "^6.0"
pytest = "^7.4.0"
flask-socketio = "^5.3.4"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
redis = "^4.6.0"
gevent = "^22.10.2"
gevent-websocket = "^0.10.1"


[tool.poetry.group.DEV.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
