[tool.poetry]
name = "linker_app"
version = "0.1.0"
description = "Project for links loader and status check"
authors = ["Fausterkun <Fausterkun@gmail.com>"]
readme = "README.md"
packages = [{include = "linker_app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.2.3"
pyyaml = "^6.0"
pytest = "^7.4.0"
flask-socketio = "^5.3.4"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
redis = "^4.6.0"
gevent = "^22.10.2"
eventlet = "^0.33.3"
psycopg-binary = "^3.1.9"
sqlalchemy = "^2.0.18"
alembic = "^1.11.1"


[tool.poetry.group.DEV.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
