[tool.poetry]
name = "linker_app"
version = "0.1.0"
description = "Project for links loader and status check"
authors = ["Fausterkun <Fausterkun@gmail.com>"]
readme = "README.md"
packages = [{include = "linker_app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.2.3"
pytest = "^7.4.0"
flask-socketio = "^5.3.4"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
redis = "^4.6.0"
sqlalchemy = "^2.0.18"
alembic = "^1.11.1"
eventlet = "^0.33.3"
cryptography = "^41.0.2"
pyyaml = "^6.0.1"
configargparse = "^1.5.5"
flask-migrate = "^4.0.4"
flask-wtf = "^1.1.1"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.DEV.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
sqlalchemy-utils = "^0.41.1"
yarl = "^1.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

